Fix theme color and update GitHub Actions to latest versions

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#c9a96e" />
+    <meta name="theme-color" content="#00d4ff" />
     <meta
       name="description"
       content="CV Profesional de Sebastian Rivera - Ingeniero de Software"
